Navigation: Prevent hiding the global header when navigation menus are open
The navigation JS for the global header previously applied a class when open, which let the header be hidden for non-header menus were open, which prevented an issue where the header overlapped the menu & close button on local navigation. Since the JS powering the navigation menu changed to the interactivity API, this global header JS was not applying anymore, and caused the header to disappear when the menu is clicked.

This removes that style, and adds a workaround for the local navigation menu.

Fixes #416

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -341,9 +341,4 @@
 		left: 0;
 		right: 0;
 	}
-
-	/* Hide the global header when other menus are open. */
-	html.has-modal-open:not(.has-global-modal-open) .global-header {
-		display: none;
-	}
 }
